--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!doctype html>
 <html lang="es_CO">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-
     <title>Generador de Firmas GCO</title>
 </head>
 <body>
-
+<!--
+    =======================================
+    =======================================
+    =======================================
+            POWERED BY: GM
+    =======================================
+    =======================================
+    =======================================
+-->
 <div class="container">
     <div class="row mt-5">
         <div class="col-12">
@@ -32,8 +37,6 @@
         </div>
     </div>
 </div>
-
-<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
